# oxidizer-discord-bot

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  README.md  config.example.json  index.ts  main.ts  nodemon.json  package.json  rust-toolchain.toml  tsconfig.json
classes/: client.ts  db.ts  log.ts
commands/: __template.ts
commands/fun/: akinator.ts  toilet-locator.ts
commands/general/: get-invite.ts  help.ts
commands/moderation/: ban.ts  kick.ts
commands/music/: __player.ts  __queue.ts  music.ts
commands/owner/: restart.ts  throw.ts
events/: ready.ts
handlers/: commands.ts  db.ts  invite.ts
src/: commands.rs  logging.rs  main.rs  svg.rs
src/commands/: ping.rs
src/commands/general/: mod.rs  ping.rs  reaction_roles.rs
src/commands/moderation/: ban.rs  mod.rs
src/commands/owner/: error.rs  mod.rs
utils/: config.ts  dirs.ts  embed.ts  exit-hook.ts  formatters.ts  funcs.ts  log.ts  quit.ts  randArray.ts  types.ts  vars.ts
