[package]
name = "oxidizer-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serenity = { version = "0.10", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "unstable_discord_api",
  "cache",
] }
image = "0.24"
tracing-subscriber = "0.3"
tracing-unwrap = "0.9"
tracing = "0.1"
once_cell = "1.10"
