[package]
name = "oxidizer-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
tracing-subscriber = "0.3"
tracing-unwrap = "0.9"
tracing = "0.1"
resvg = "0.22"
once_cell = "1.0"
poise = { git = "https://github.com/kangalioo/poise" }
regex = "1.5"
serenity-guild-storage = { git = "https://github.com/TheBotlyNoob/serenity-guild-storage" }
